--- a/src/client/app/core/oda-drop-down-list/oda-drop-down-list.component.html
+++ b/src/client/app/core/oda-drop-down-list/oda-drop-down-list.component.html
@@ -1,7 +1,7 @@
 <div class="card">
- <div class="card-header">
+ <!-- <div class="card-header">
   {{pageTitle}}
- </div>
+ </div> -->
  <div class="card-body" *ngIf="vn$ | async as vn">
   <div class="container">
    <div class="row justify-content-between">
