--- a/src/client/app/features/oreferences/oreference-detail/oreference-detail.component.html
+++ b/src/client/app/features/oreferences/oreference-detail/oreference-detail.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="panel-footer">
-    <a class="btn btn-default" [routerLink]="['/oreferences']" [queryParamsHandling]="preserve">>
+    <a class="btn btn-default" [routerLink]="['/oreferences']">>
       <i calss="glyphicon glyphicon-chevron-left"></i>Back
     </a>
     <a class="btn btn-primary" style="width:80px;margin-left:10px" [routerLink]="['/oreferences',balance.id, 'edit']">
