--- a/src/client/app/features/nstbalances/nstbalance-detail/nstbalance-detail.component.html
+++ b/src/client/app/features/nstbalances/nstbalance-detail/nstbalance-detail.component.html
@@ -5,7 +5,6 @@
 
   <div class="card-body">
     <form>
-
       <div class="form-group row">
         <div class="col-sm-2 col-form-label col-form-label-sm">Year:</div>
         <div class="form-control form-control-sm">{{ vm.nstbalance.oexercCompta }}</div>
@@ -28,20 +27,19 @@
         </div>
         <div class="form-group row">
           <div class="col-sm-2 col-form-label col-form-label-sm">SoldeDebit:</div>
-          <div class="form-control form-control-sm">{{ vm.nstbalance.SoldeDebit |currency:"USD":code: "1.0-2"}}</div>
+          <div class="form-control form-control-sm">{{ vm.nstbalance.SoldeDebit}}</div>
         </div>
         <div class="form-group row">
           <div class="col-sm-2 col-form-label col-form-label-sm">SoldeCredit:</div>
-          <div class="form-control form-control-sm">{{ vm.nstbalance.SoldeCredit |currency:"USD":code: "1.2-2"}}</div>
+          <div class="form-control form-control-sm">{{ vm.nstbalance.SoldeCredit}}</div>
         </div>
-
 
     </form>
     <div class="has-error" *ngIf="errorMessage">{{errorMessage}}</div>
   </div>
 
   <div class="panel-footer">
-    <a class="btn btn-default" [routerLink]="['/nstbalances']" [queryParamsHandling]="preserve">
+    <a class="btn btn-default" [routerLink]="['/nstbalances']" >
       <i calss="glyphicon glyphicon-chevron-left"></i>Back
     </a>
    <!--  <a class="btn btn-primary" style="width:80px;margin-left:10px" [routerLink]="['/nstbalances',balance.id, 'edit']">
