--- a/src/client/app/features/nstbalances/nstbalance-list/nstbalance-list.component.html
+++ b/src/client/app/features/nstbalances/nstbalance-list/nstbalance-list.component.html
@@ -55,8 +55,8 @@
                 {{ balance.IntitulCompte | lowercase | convertToSpaces : ',' }}
               </a>
             </td>
-            <td>{{ balance.SoldeDebit |currency:'USD':code: '1.0-2'}}</td>
-            <td>{{ balance.SoldeCredit |currency:'USD':code: '1.2-2'}}</td>
+            <td>{{ balance.SoldeDebit}}</td>
+            <td>{{ balance.SoldeCredit}}</td>
             <td>
               <a class="btn btn-primary" [routerLink]="['/nstbalances',balance.id, 'edit']">
                 Edit
@@ -75,7 +75,6 @@
 <div class="alert alert-danger" *ngIf="errorMessage$ | async as errorMessage">
   {{ errorMessage }}
 </div>
-{{ vm | json }}
-
+<!-- {{ vm | json }} -->
 
 <!--{{ balances.length | json }}-->
