--- a/src/client/app/features/otableaupostes/otableauposte-detail/otableauposte-detail.component.html
+++ b/src/client/app/features/otableaupostes/otableauposte-detail/otableauposte-detail.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="panel-footer">
-    <a class="btn btn-default" [routerLink]="['/otableaupostes']" [queryParamsHandling]="preserve">>
+    <a class="btn btn-default" [routerLink]="['/otableaupostes']">>
       <i calss="glyphicon glyphicon-chevron-left"></i>Back
     </a>
     <a class="btn btn-primary" style="width:80px;margin-left:10px" [routerLink]="['/otableaupostes',balance.id, 'edit']">
