--- a/src/client/app/core/nav-bar/nav-bar.component.html
+++ b/src/client/app/core/nav-bar/nav-bar.component.html
@@ -1,3 +1,9 @@
+
+<div class="toolbar" role="banner">
+
+
+</div>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class='navbar-brand'>{{pageTitle}}</a>
 
