--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -10,6 +10,9 @@
         <router-outlet name="popup"></router-outlet>
       </div>
     </div>
+    <div>
+      <app-nstbalanceinput-list></app-nstbalanceinput-list>
+    </div>
   </div>
 </div>
 
