--- a/src/client/app/features/nstbalanceinputs/nstbalanceinput-list/nstbalanceinput-list.component.html
+++ b/src/client/app/features/nstbalanceinputs/nstbalanceinput-list/nstbalanceinput-list.component.html
@@ -3,7 +3,7 @@
     {{pageTitle}}
   </div>
   <!-- Filter the balance sheet   -->
-  <div class="card-body">
+  <div class="card-body"  *ngIf="vm$ | async as vm">
     <div class="container">
       <div class="row justify-content-between">
         <div class="row">
@@ -21,7 +21,7 @@
     </div>
 
     <div class="table-responsive">
-      <table class="table md-0" *ngIf="balances && balances.length">
+      <table class="table md-0" *ngIf="vm.nstbalanceinputs && vm.nstbalanceinputs.length">
         <thead>
           <tr>
             <th>NumCompte</th>
@@ -32,10 +32,11 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let balance of balances | paginate: config">
+          <tr *ngFor="let balance of vm.nstbalanceinputs | paginate: config">
             <td> {{ balance.NumCompte }}
             </td>
-            <td> <a routerLink="/nstbalanceinputs/{{balance.id}}/edit">
+            <td> <a [ngClass]="{'active': balance?.id===vm.nstbalanceinputId }"
+              (click)='onSelected(balance.id)'  routerLink="/nstbalanceinputs/{{balance.id}}/edit">
                 {{ balance.IntitulCompte | lowercase | convertToSpaces : ',' }}
               </a>
             </td>
