--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+/*
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Arial", sans-serif; }
 
@@ -238,7 +238,7 @@ body { margin: 0; font-family: Roboto, "Arial", sans-serif; }
 
 
   /* Responsive Styles */
-  @media screen and (max-width: 767px) {
+ /* @media screen and (max-width: 767px) {
 
     .card-container > *:not(.circle-link) ,
     .terminal {
@@ -267,3 +267,28 @@ body { margin: 0; font-family: Roboto, "Arial", sans-serif; }
     }
   }
 
+*/
+
+
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
+}
+
+.basic-container {
+  padding: 30px;
+}
+
+.version-info {
+  font-size: 8pt;
+  float: right;
+}
+example-button-row button,
+.example-button-row a {
+  margin-right: 8px;
+}
+mat-form-field {
+  margin-right: 12px;
+}
