--- a/src/client/app/features/oexerccompta/oexerccompta-search/oexerccompta-search.component.html
+++ b/src/client/app/features/oexerccompta/oexerccompta-search/oexerccompta-search.component.html
@@ -1,1 +1,10 @@
-<p>oexerccompta-search works!</p>
+<div id="search-component">
+  <h4>Search</h4>
+  <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
+  <ul class="search-result">
+    <li *ngFor="let oexerccompta of oexerccompta$ | async" >
+      <a routerLink="/oexerccomptas/{{oexerccompta.id}}/edit">
+        {{oexerccompta.oExercComptaId}}
+      </a>
+  </ul>
+</div>
